all routes and components finished but routing doens´t work properly

--- a/routing_components/public/index.html
+++ b/routing_components/public/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body class="h-svh">
-    <div class="mx-auto w-[80%]">
+    <div class="mx-auto w-[80%]" id="root">
         <header class="flex flex-row justify-between mx-2 mt-2 mb-4 border-b border-gray-400 pb-4 pt-2">
             <div class="w-32">
                 <svg id="logo-54" width="120" viewBox="0 0 170 41" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -60,6 +60,18 @@
         </header>
         <main class="flex flex-row flex-wrap">
             <section class="inline-block">
+                <div class="w-48 border border-gray-300 p-2 m-2 rounded-lg shadow-lg   hover:bg-gray-100 cursor-pointer hover:bg-gray-100 cursor-pointer">
+                    <h1 class="text-xl">Headline</h1>
+                    <h3 class="text-lg">Subheadline</h3>
+                    <p class="text-xs w-36 h-12 line-clamp-3">Lorem ipsum dolor sit
+                        amet
+                        consectetur
+                        adipisicing elit. Sit eveniet minima ullam quia vero facere hic deserunt corrupti laboriosam,
+                        iusto libero molestias quidem quas a veritatis incidunt id
+                        praesentium quos.</p>
+                </div>
+            </section>
+            <section>
                 <div class="w-48 border border-gray-300 p-2 m-2 rounded-lg shadow-lg  hover:bg-gray-100 cursor-pointer">
                     <h1 class="text-xl">Headline</h1>
                     <h3 class="text-lg">Subheadline</h3>
@@ -72,7 +84,7 @@
                 </div>
             </section>
             <section>
-                <div class="w-48 border border-gray-300 p-2 m-2 rounded-lg shadow-lg">
+                <div class="w-48 border border-gray-300 p-2 m-2 rounded-lg shadow-lg  hover:bg-gray-100 cursor-pointer">
                     <h1 class="text-xl">Headline</h1>
                     <h3 class="text-lg">Subheadline</h3>
                     <p class="text-xs w-36 h-12 line-clamp-3">Lorem ipsum dolor sit
@@ -84,7 +96,7 @@
                 </div>
             </section>
             <section>
-                <div class="w-48 border border-gray-300 p-2 m-2 rounded-lg shadow-lg">
+                <div class="w-48 border border-gray-300 p-2 m-2 rounded-lg shadow-lg  hover:bg-gray-100 cursor-pointer">
                     <h1 class="text-xl">Headline</h1>
                     <h3 class="text-lg">Subheadline</h3>
                     <p class="text-xs w-36 h-12 line-clamp-3">Lorem ipsum dolor sit
@@ -96,7 +108,7 @@
                 </div>
             </section>
             <section>
-                <div class="w-48 border border-gray-300 p-2 m-2 rounded-lg shadow-lg">
+                <div class="w-48 border border-gray-300 p-2 m-2 rounded-lg shadow-lg  hover:bg-gray-100 cursor-pointer">
                     <h1 class="text-xl">Headline</h1>
                     <h3 class="text-lg">Subheadline</h3>
                     <p class="text-xs w-36 h-12 line-clamp-3">Lorem ipsum dolor sit
@@ -108,7 +120,7 @@
                 </div>
             </section>
             <section>
-                <div class="w-48 border border-gray-300 p-2 m-2 rounded-lg shadow-lg">
+                <div class="w-48 border border-gray-300 p-2 m-2 rounded-lg shadow-lg  hover:bg-gray-100 cursor-pointer">
                     <h1 class="text-xl">Headline</h1>
                     <h3 class="text-lg">Subheadline</h3>
                     <p class="text-xs w-36 h-12 line-clamp-3">Lorem ipsum dolor sit
@@ -120,7 +132,7 @@
                 </div>
             </section>
             <section>
-                <div class="w-48 border border-gray-300 p-2 m-2 rounded-lg shadow-lg">
+                <div class="w-48 border border-gray-300 p-2 m-2 rounded-lg shadow-lg  hover:bg-gray-100 cursor-pointer">
                     <h1 class="text-xl">Headline</h1>
                     <h3 class="text-lg">Subheadline</h3>
                     <p class="text-xs w-36 h-12 line-clamp-3">Lorem ipsum dolor sit
@@ -132,7 +144,7 @@
                 </div>
             </section>
             <section>
-                <div class="w-48 border border-gray-300 p-2 m-2 rounded-lg shadow-lg">
+                <div class="w-48 border border-gray-300 p-2 m-2 rounded-lg shadow-lg  hover:bg-gray-100 cursor-pointer">
                     <h1 class="text-xl">Headline</h1>
                     <h3 class="text-lg">Subheadline</h3>
                     <p class="text-xs w-36 h-12 line-clamp-3">Lorem ipsum dolor sit
@@ -144,7 +156,7 @@
                 </div>
             </section>
             <section>
-                <div class="w-48 border border-gray-300 p-2 m-2 rounded-lg shadow-lg">
+                <div class="w-48 border border-gray-300 p-2 m-2 rounded-lg shadow-lg  hover:bg-gray-100 cursor-pointer">
                     <h1 class="text-xl">Headline</h1>
                     <h3 class="text-lg">Subheadline</h3>
                     <p class="text-xs w-36 h-12 line-clamp-3">Lorem ipsum dolor sit
@@ -156,7 +168,7 @@
                 </div>
             </section>
             <section>
-                <div class="w-48 border border-gray-300 p-2 m-2 rounded-lg shadow-lg">
+                <div class="w-48 border border-gray-300 p-2 m-2 rounded-lg shadow-lg  hover:bg-gray-100 cursor-pointer">
                     <h1 class="text-xl">Headline</h1>
                     <h3 class="text-lg">Subheadline</h3>
                     <p class="text-xs w-36 h-12 line-clamp-3">Lorem ipsum dolor sit
@@ -168,7 +180,7 @@
                 </div>
             </section>
             <section>
-                <div class="w-48 border border-gray-300 p-2 m-2 rounded-lg shadow-lg">
+                <div class="w-48 border border-gray-300 p-2 m-2 rounded-lg shadow-lg  hover:bg-gray-100 cursor-pointer">
                     <h1 class="text-xl">Headline</h1>
                     <h3 class="text-lg">Subheadline</h3>
                     <p class="text-xs w-36 h-12 line-clamp-3">Lorem ipsum dolor sit
@@ -180,19 +192,7 @@
                 </div>
             </section>
             <section>
-                <div class="w-48 border border-gray-300 p-2 m-2 rounded-lg shadow-lg">
-                    <h1 class="text-xl">Headline</h1>
-                    <h3 class="text-lg">Subheadline</h3>
-                    <p class="text-xs w-36 h-12 line-clamp-3">Lorem ipsum dolor sit
-                        amet
-                        consectetur
-                        adipisicing elit. Sit eveniet minima ullam quia vero facere hic deserunt corrupti laboriosam,
-                        iusto libero molestias quidem quas a veritatis incidunt id
-                        praesentium quos.</p>
-                </div>
-            </section>
-            <section>
-                <div class="w-48 border border-gray-300 p-2 m-2 rounded-lg shadow-lg">
+                <div class="w-48 border border-gray-300 p-2 m-2 rounded-lg shadow-lg  hover:bg-gray-100 cursor-pointer">
                     <h1 class="text-xl">Headline</h1>
                     <h3 class="text-lg">Subheadline</h3>
                     <p class="text-xs w-36 h-12 line-clamp-3">Lorem ipsum dolor sit
